--- a/settings.json
+++ b/settings.json
@@ -1,17 +1,17 @@
 {
 	"prefix": ".",
 	"lolkey": "registrasi ke webnya",
-	"ownerNumber": "94767043432",
-	"ownerNumberr": "+94767043432",
-	"botnumber": "94767043432",
+	"ownerNumber": "254112976931",
+	"ownerNumberr": "+254112976931",
+	"botnumber": "254112976931",
 	"cr": "Queen Alexa",
 	"yt":"https://youtube.com/",
 	"grub":"https://chat.whatsapp.com/",
-	"wa": "wa.me/+94767043432",
-	"donate": "94767043432",
-	"ig": "https://instagram.com/HYPER_MOD",
-	"gt": "https://github.com/HYPER-MOD",
-	"ownername": "© HYPER-MOD",
+	"wa": "wa.me/+254112976931",
+	"donate": "254112976931",
+	"ig": "https://instagram.com/it's..me",
+	"gt": "https://github.com/Sa-vage",
+	"ownername": "© sa-vage",
 	"botname":"「 Queen Alexa 」",
 	"img":"https://k.top4top.io/p_2001zgi471.jpg",
 	"thumb":"thumbnail.jpg",
