--- a/settings.json
+++ b/settings.json
@@ -1,9 +1,9 @@
 {
 	"prefix": ".",
 	"lolkey": "registrasi ke webnya",
-	"ownerNumber": "254112976931",
-	"ownerNumberr": "+254112976931",
-	"botnumber": "254112976931",
+	"ownerNumber": "254757233813",
+	"ownerNumberr": "+254757233813",
+	"botnumber": "254757233813",
 	"cr": "Queen Alexa",
 	"yt":"https://youtube.com/",
 	"grub":"https://chat.whatsapp.com/",
@@ -11,10 +11,10 @@
 	"donate": "254112976931",
 	"ig": "https://instagram.com/it's..me",
 	"gt": "https://github.com/Sa-vage",
-	"ownername": "© sa-vage",
+	"ownername": "© Justice",
 	"botname":"「 Queen Alexa 」",
 	"img":"https://k.top4top.io/p_2001zgi471.jpg",
 	"thumb":"thumbnail.jpg",
 	"fakethumb":"fake.jpg",
-	"fake": " 「 queen Alexa 」\n© HYPER-MOD"
+	"fake": " 「 queen Alexa 」\n© Justice-MOD"
 }
