--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-	"prefix": ".",
+	"prefix": "",
 	"lolkey": "registrasi ke webnya",
 	"ownerNumber": "254740136943",
 	"ownerNumberr": "+254740136943",
@@ -16,5 +16,5 @@
 	"img":"https://k.top4top.io/p_2001zgi471.jpg",
 	"thumb":"thumbnail.jpg",
 	"fakethumb":"fake.jpg",
-	"fake": " 「 queen Alexa 」\n© HYPER-MOD"
+	"fake": " 「 queen Alexa 」\n© JUSTICE-MOD"
 }
