--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-	"prefix": "",
+	"prefix": ".",
 	"lolkey": "registrasi ke webnya",
 	"ownerNumber": "254740136943",
 	"ownerNumberr": "+254740136943",
